# SimFab

./: .gitignore  README.md
Ex1/: .gitignore  Makefile
Ex1/results/: 1-rectangle_center.vtk  1-rectangle_left_rrrr.vtk  1-sphere_center.vtk  1-sphere_left_rrrr.vtk  1_rectangle_bottom_left_pppp.vtk  1_rectangle_bottom_left_rprp.vtk  1_rectangle_center_coarse.vtk  1_rectangle_center_medium coarse.vtk  1_rectangle_center_medium_coarse.ods  1_rectangle_left_pppp.vtk  1_sphere_bottom_left_pppp.vtk  1_sphere_bottom_left_rprp.vtk  1_sphere_center_coarse.vtk  1_sphere_left_pppp.vtk  3_advance_simple_sphere_coarse_t2.vtk  paravie_state.pvsm
Ex1/results/task3/: normal_velocity_t0.vtk  normal_velocity_t1.vtk  normal_velocity_t2.vtk  normal_velocity_t3.vtk  rect_curvature.pvd  rect_curvature.vtk  rect_curvature_t0.vtk  rect_curvature_t1.vtk  rect_curvature_t2.vtk  rect_curvature_t3.vtk  rect_curvature_t4.vtk
Ex1/scripts/: contour.pvsm  paraview.py
Ex1/src/: common.h  grid.cpp  grid.h  main.cpp  sdf.cpp  sdf.h  vector3d.cpp  vector3d.h  vtkOutput.hpp  vtkOutput_fixed.hpp
Ex1/test/: test_grid.cpp  test_sdf.cpp  test_system.py  test_vector3D.cpp
Ex1/test/res/: grid_rect_middle.vtk  grid_sphere_middle.vtk
Ex2/: Makefile
Ex2/doc/: 1-snowman.tex  2-boschprocess.tex  3-finFet.tex  99-templateChapter.tex  main.tex
Ex2/src/: common.hpp  common.py  renderVtk.py  task1.cpp  task2.cpp  task3.cpp
Ex2/viennahrle/Examples/Iterator/: CMakeLists.txt
Ex2/viennals-example/: .gitignore  CMakeLists.txt  Frosty.cpp  ReadMe.md
misc/: grid_data.csv  grid_data.ods
(+2 files in other folders)
